Fixed: Light mode spoiler on smartphone changed to work the same as 0.7 release Fixed: Spoiler roll over in light mode not working in full featured browsers. Fixed: Stray <noemots> and <nowiki> tags left behind by message_split_fiddle when emoticons are disabled.

--- a/forum/styles/style.css
+++ b/forum/styles/style.css
@@ -650,6 +650,18 @@ a {
     padding: 3px;
 }
 
+.spoiler_light {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    border: 1px solid #CCCCCC;
+    color: #CCCCCC;
+    background-color: #EEEEEE;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    margin-left: 40px;
+    margin-right: 10px;
+    padding: 3px;
+}
+
 .tools {
     margin: 0;
     margin-bottom: 3px;
